examples/type_system/failing/130_do_missing_brace.flx
let y = do x + 1
let after = 1
